prepared to next site effect

--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./blurred bubble/background-bubble.css">
+    <link rel="stylesheet" href="./spark pixel/spark-pixel.css">
+    <title>BLURRED BUBBLE</title>
 </head>
 <body>
+    <!-- blurred bubble - background -->
+    <div id="blur"></div>
+    <div id="bubble"></div>
+    <!-- spark pixel - card detail-->
     <div class="card">
         <div class="card-content">
-            <h1>card</h1>
-            <h4>card description</h4>
+            <h1>spark + blurred bubble</h1>
+            <h4>card spark detail and blurred bubble background</h4>
         </div>
     </div>
+    <!--  -->
 </body>
+<script src="./blurred bubble/bubble-track.js"></script>
 </html>
