now with text color animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="./blurred bubble/background-bubble.css">
     <link rel="stylesheet" href="./spark pixel/spark-pixel.css">
+    <link rel="stylesheet" href="./animated color text/animated-color-text.css">
     <title>BLURRED BUBBLE</title>
 </head>
 <body>
@@ -16,8 +17,15 @@
     <!-- spark pixel - card detail-->
     <div class="card">
         <div class="card-content">
-            <h1>spark + blurred bubble</h1>
-            <h4>card spark detail and blurred bubble background</h4>
+            <h1>spark + blurred bubble + text effect</h1>
+            <h4>card
+                <!-- animated color text - text effect -->
+                <span class="animated-color-text">spark</span>
+                detail, blurred
+                <span class="animated-color-text">bubble</span>
+                background and animated
+                <span class="animated-color-text">color text</span>
+            </h4>
         </div>
     </div>
     <!--  -->
