i will add more effect in feture

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./blurred bubble/background-bubble.css">
     <link rel="stylesheet" href="./spark pixel/spark-pixel.css">
     <link rel="stylesheet" href="./animated color text/animated-color-text.css">
+    <link rel="stylesheet" href="./card hover effect/card-hover-effect.css">
     <title>BLURRED BUBBLE</title>
 </head>
 <body>
@@ -17,18 +18,12 @@
     <!-- spark pixel - card detail-->
     <div class="card">
         <div class="card-content">
-            <h1>spark + blurred bubble + text effect</h1>
-            <h4>card
-                <!-- animated color text - text effect -->
-                <span class="animated-color-text">spark</span>
-                detail, blurred
-                <span class="animated-color-text">bubble</span>
-                background and animated
-                <span class="animated-color-text">color text</span>
+            <h1>spark <span class="animated-color-text">+</span> blurred bubble</h1>
+            <h4>card spark detail and blurred bubble background
             </h4>
         </div>
     </div>
-    <!--  -->
 </body>
 <script src="./blurred bubble/bubble-track.js"></script>
+<script src="./card hover effect/card-hover-track.js"></script>
 </html>
